fix header overflow

--- a/page/default.css
+++ b/page/default.css
@@ -35,7 +35,11 @@ body{
   color: var(--text);
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
+
+}
+
+main{
+  margin-top: 3rem;
 }
 
 .logo:hover{
@@ -49,10 +53,12 @@ body{
 .header{
   background-color: var(--primary);
   color: var(--primary);
-  padding: 1rem;
   text-align: center;
   box-shadow: 1px 1px 5px rgba(0,0,0,0.5);
+  position: fixed;
+  z-index: 200;
   width: 100%;
+  top: 0;
 }
 
 
@@ -62,7 +68,7 @@ body{
   align-items: center;
   padding: 1rem;
   margin-inline-end: 1rem;
-  height: 30px;
+  height: 3rem;
 }
 .nav a{
   color: var(--secondary);
@@ -70,8 +76,8 @@ body{
   text-decoration: none;
   font-weight: bold;
   padding: 0.5rem 1rem 0.5rem 1rem;
-  border-radius: 20px;
-  margin: 25px;
+  border-radius: 2rem;
+  margin: 3rem;
   scale: 1.6;
   font-family: "Josefin Sans", sans-serif;
 }
@@ -91,7 +97,7 @@ body{
   font-weight: bold;
   padding: 0.5rem 1rem 0.5rem 1rem;
   border-radius: 20px;
-  margin: 5px;
+  margin: 0.1rem;
   scale: 1;
   font-family: "Josefin Sans", sans-serif;
 }
@@ -101,7 +107,7 @@ body{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 30px;
+  height: 3rem;
   width: auto;
   color: var(--primary);
 
