--- a/page/main/main.css
+++ b/page/main/main.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 50rem;
+  height: 30rem;
   width: 100%;
 }
 
@@ -13,7 +13,7 @@
   justify-content: center;
   align-items: center;
   background-color: var(--secondary);
-  height: 200px;
+  height: 15rem;
 }
 
 .welcome-container img{
@@ -74,9 +74,10 @@
   color: var(--primary);
   text-shadow: 2px 2px 5px rgba(0,0,0,0.5);
   font-family: "Josefin Sans", sans-serif;
-  font-size: 150px;
+  font-size: 10vw;
   font-weight: bold;
   text-align: center;
+  z-index: 2;
   margin: 0;
 }
 
